...
        confirmButton.titleFont = UIFont.boldFont(16)
        confirmButton.foregroundColor = .white
        confirmButton.backgroundColor = .black
        confirmButton.setCornerRadius(radius: 4)
        confirmButton.addTarget(self, action: #selector(confirmTransfer), for: .touchUpInside)
        confirmButton.isEnabled = false
        confirmButton.accessibilityIdentifier = "confirm_button"
        confirmButton.translatesAutoresizingMaskIntoConstraints = false
        
        return confirmButton
    }()
    
    private lazy var searchTextField: TextField = {
...
    }
    
    override func viewDidLoad() {
        title = "New account, card number"
        super.viewDidLoad()
        
        view.accessibilityIdentifier = "NewAccountViewController"
//        enableTapToDismissKeyboard()
        
        view.addSubview(searchTextField)
        searchTextField.snp.makeConstraints { (make) in
            make.top.equalToSuperview().inset(26)
            make.leading.trailing.equalToSuperview().inset(16)
...
